# ml-template

./: .gitignore  LICENSE  README.md  callbacks.py  evaluate.py  pyproject.toml  test.py  train.py  utils.py
configs/: default.yaml
model/: __init__.py  dataset.py  loss.py  model.py  pl_model.py
tests/: test_smoke.py
