[project]
name = "ml-template"
version = "0.1.0"
description = "Minimal PyTorch Lightning + MLflow + Pixi template for ML projects"
readme = "README.md"
requires-python = ">=3.12,<3.13"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = ">=3.12,<3.13"
pytorch-cpu = ">=2.10,<2.11"
lightning = ">=2.6,<2.7"
aim = ">=3.29,<3.30"
pyyaml = "*"
matplotlib = "*"
setuptools = "<81"

[tool.pixi.tasks]
train = "python train.py --config configs/default.yaml"
evaluate = "python evaluate.py --config configs/default.yaml"
aim-ui = "aim up --repo local/aim --host 127.0.0.1 --port 43800"

clean-runs = "rm -rf local/aim"
clean-checkpoints = "rm -rf local/checkpoints"
clean-figures = "rm -rf local/figures"
clean-all = "rm -rf local/aim local/checkpoints local/figures"

lint = "ruff check ."
format = "ruff format ."
pytest = "pytest"

[tool.pixi.feature.dev.dependencies]
pytest = "*"
ruff = "*"

[tool.pixi.environments]
default = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
